<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="miracleit.com.homeworkmiracle.RandomList">

    <Button
        android:id="@+id/btn_new_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="201dp"
        android:background="@android:color/holo_blue_light"
        android:onClick="newText"
        android:text="@string/save_text" />

    <EditText
        android:id="@+id/txt_new_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_new_text"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="93dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_text"
        android:text="" />

    <TextView
        android:id="@+id/txt_show_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txt_new_text"
        android:layout_marginTop="34dp"
        android:hint="@string/random_phrase"
        android:text="" />
</RelativeLayout>
